first entry added - Soulmates by Lang Leav

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Poems & Cakes</title>
+<head>		
+	<title>Poems & Cakes</title>
 </head>
+
 <body>
+	<h1>Poems & Cakes</h1>
+	<h2>A collection of poems from renowned writer...and cakes (picture only :D )</h2>
+	<p> May you find familiarity in all these poems too and feel comforted, like I did.</p>
 
-<h1>Poems & Cakes</h1>
-<h2>A collection of poems from renowned writer...and cakes (picture only :D )</h2>
-
-<p> May you find familiarity in all these poems too and feel comforted, like I did.</p>
+	<h4>Poem #1</h4>
+		<h5>Soulmates</h5>
+		<p>I don’t know how you are so familiar to me—or why it feels less like I am getting to know you and more as though I am remembering who you are. How every smile, every whisper brings me closer to the impossible conclusion that I have known you before, I have loved you before—in another time, a different place, some other existence</p>
+		<p>-Lang Leav</p>
 </body>
 </html>
