--- a/index.html
+++ b/index.html
@@ -9,18 +9,34 @@
 	<h2>A collection of poems from renowned writer...and cakes (picture only :D )</h2>
 	<p> May you find familiarity in all these poems too and feel comforted, like I did.</p>
 
-	<h4>Poem #1</h4>
+	<h3>Poem #1</h3>
 		<h5>Soulmates</h5>
 		<p>I don't know how you are so familiar to me-or why it feels less like I am getting to know you and more as though I am remembering who you are. How every smile, every whisper brings me closer to the impossible conclusion that I have known you before, I have loved you before-in another time, a different place, some other existence</p>
 		<p>-Lang Leav</p>
 
-	<h4>Poem #2</h4>
+	<h3>Poem #2</h3>
 	<h5>An excerpt from the Bible</h5>
 	<p>Love is patient, love is kind. It does not envy, it does not boast, it is not proud.  It does not dishonor others, it is not self-seeking, it is not easily angered, it keeps no record of wrongs. 6 Love does not delight in evil but rejoices with the truth.  It always protects, always trusts, always hopes, always perseveres.
 
  Love never fails. But where there are prophecies, they will cease; where there are tongues, they will be stilled; where there is knowledge, it will pass away.
 
                 <p>-Corinthians 13:4-8</p>
+
+		<h3>Poem #3</h3>
+                <h5>When You Come</h5>
+		<p>When you come to me, unbidden,
+		Beckoning me
+		To long-ago rooms,
+		Where memories lie.
+
+		Offering me, as to a child, an attic,
+		Gatherings of days too few.
+		Baubles of stolen kisses.
+		Trinkets of borrowed loves.
+		Trunks of secret words,
+
+		I CRY.</p>
+                <p>-Maya Angelou</p>
 
 </body>
 </html>
