editted the paragraphing

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 		<p>-Lang Leav</p>
 
 	<h3>Poem #2</h3>
-	<h5>An excerpt from the Bible</h5>
-	<p>Love is patient, love is kind. It does not envy, it does not boast, it is not proud.  It does not dishonor others, it is not self-seeking, it is not easily angered, it keeps no record of wrongs. 6 Love does not delight in evil but rejoices with the truth.  It always protects, always trusts, always hopes, always perseveres.
-
- Love never fails. But where there are prophecies, they will cease; where there are tongues, they will be stilled; where there is knowledge, it will pass away.
+		<h5>An excerpt from the Bible</h5>
+		<p>Love is patient, love is kind. It does not envy, it does not boast, it is not proud.
+		It does not dishonor others, it is not self-seeking, it is not easily angered, it keeps no record of wrongs.
+		Love does not delight in evil but rejoices with the truth.
+		It always protects, always trusts, always hopes, always perseveres.
+		Love never fails.
+		But where there are prophecies, they will cease; where there are tongues, they will be stilled; where there is knowledge, it will pass away.
 
                 <p>-Corinthians 13:4-8</p>
 
-		<h3>Poem #3</h3>
+	<h3>Poem #3</h3>
                 <h5>When You Come</h5>
 		<p>When you come to me, unbidden,
 		Beckoning me
