Added option button

--- a/index.html
+++ b/index.html
@@ -5,16 +5,33 @@
 </head>
 
 <body>
-	<h1>Poems & Cakes</h1>
+	<nav>
+		<ul>
+          		<li>
+            			<a href="#about">About</a>
+          		</li>
+          		<li>
+            			<a href="#poems">Poems</a>
+          		</li>
+          		<li>
+            			<a href="#cakes">Cakes</a>
+         		</li>
+          		<li>
+            			<a href="#contact">Contact</a>
+          		</li>
+		</ul>
+	</nav>
+	<h1 id="about">Poems & Cakes</h1>
 	<h2>A collection of poems from renowned writer...and cakes (picture only :D )</h2>
 	<p> May you find familiarity in all these poems too and feel comforted, like I did.</p>
 
-	<h3>Poem #1</h3>
+	<h3 id="poems">Poems</h3>
+	<p>Poem #1</p>
 		<h5>Soulmates</h5>
 		<p>I don't know how you are so familiar to me-or why it feels less like I am getting to know you and more as though I am remembering who you are. How every smile, every whisper brings me closer to the impossible conclusion that I have known you before, I have loved you before-in another time, a different place, some other existence</p>
 		<p>-Lang Leav</p>
 
-	<h3>Poem #2</h3>
+	<p>Poem #2</p>
 		<h5>An excerpt from the Bible</h5>
 		<p>Love is patient, love is kind. It does not envy, it does not boast, it is not proud.
 		It does not dishonor others, it is not self-seeking, it is not easily angered, it keeps no record of wrongs.
@@ -25,7 +42,7 @@
 
                 <p>-Corinthians 13:4-8</p>
 
-	<h3>Poem #3</h3>
+	<p>Poem #3</p>
                 <h5>When You Come</h5>
 		<p>When you come to me, unbidden,
 		Beckoning me
@@ -41,7 +58,7 @@
 		I CRY.</p>
                 <p>-Maya Angelou</p>
 
-	<h3>Cakes</h3>
+	<h3 id="cakes">Cakes</h3>
 		<p>Cake #1</p>
 			<img src="https://s.yimg.com/ny/api/res/1.2/AJa0M6VJoEYw9m7A8Rhmlg--~A/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9ODAw/http://l.yimg.com/cd/resizer/2.0/original/sh4x5B0mEWTjGLjuhP0q-5kFT8w" alt="Cake #1" width="500" height="600">
 			
