--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 	<p> May you find familiarity in all these poems too and feel comforted, like I did.</p>
 
 	<h3 id="poems">Poems</h3>
-	<p>Poem #1</p>
+	<p><strong>Poem #1</strong></p>
 		<h5>Soulmates</h5>
 		<p>I don't know how you are so familiar to me-or why it feels less like I am getting to know you and more as though I am remembering who you are. How every smile, every whisper brings me closer to the impossible conclusion that I have known you before, I have loved you before-in another time, a different place, some other existence</p>
 		<p>-Lang Leav</p>
 
-	<p>Poem #2</p>
+	<p><strong>Poem #2</strong></p>
 		<h5>An excerpt from the Bible</h5>
 		<p>Love is patient, love is kind. It does not envy, it does not boast, it is not proud.
 		It does not dishonor others, it is not self-seeking, it is not easily angered, it keeps no record of wrongs.
@@ -42,7 +42,7 @@
 
                 <p>-Corinthians 13:4-8</p>
 
-	<p>Poem #3</p>
+	<p><strong>Poem #3</strong></p>
                 <h5>When You Come</h5>
 		<p>When you come to me, unbidden,
 		Beckoning me
