--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
 
 	<h3>Contact Us</h3>
 	<p>Email: <a href="mailto:nuridayu@mcruncher.com?Subject=Hello%20again" target="_top">nuridayu@mcruncher.com</a></p>
-	<p>Facebook :<a href="https://www.facebook.com" target="_top">Facebook</a></p>
+	<p>Facebook :<a href="https://www.facebook.com" target="_blank">Facebook</a></p>
 </body>
 </html>
