--- a/index.html
+++ b/index.html
@@ -28,33 +28,52 @@
 	<h3 id="poems">Poems</h3>
 	<p><strong>Poem #1</strong></p>
 		<h5>Soulmates</h5>
-		<p>I don't know how you are so familiar to me-or why it feels less like I am getting to know you and more as though I am remembering who you are. How every smile, every whisper brings me closer to the impossible conclusion that I have known you before, I have loved you before-in another time, a different place, some other existence</p>
+		<p>I don't know how you are so familiar to me-<br>
+			or why it feels less like I am getting to know you <br>
+			and more as though I am remembering who you are. <br>
+			How every smile, every whisper brings me closer <br>
+			to the impossible conclusion that I have known you before, <br>
+			I have loved you before-in another time, <br>
+			a different place, <br>
+			some other existence</p>
 		<p>-Lang Leav</p>
 
 	<p><strong>Poem #2</strong></p>
 		<h5>An excerpt from the Bible</h5>
-		<p>Love is patient, love is kind. It does not envy, it does not boast, it is not proud.
-		It does not dishonor others, it is not self-seeking, it is not easily angered, it keeps no record of wrongs.
-		Love does not delight in evil but rejoices with the truth.
-		It always protects, always trusts, always hopes, always perseveres.
-		Love never fails.
-		But where there are prophecies, they will cease; where there are tongues, they will be stilled; where there is knowledge, it will pass away.
-
+		<p>Love is patient, love is kind. <br>
+			It does not envy, <br>
+			it does not boast, <br>
+			it is not proud. <br>
+			<br>
+			It does not dishonor others, <br>
+			it is not self-seeking, <br>
+			it is not easily angered, <br>
+			it keeps no record of wrongs. <br>
+			<br>
+			Love does not delight in evil but rejoices with the truth. <br>
+			It always protects, always trusts, always hopes, always perseveres. <br>
+			Love never fails. <br>
+			But where there are prophecies,<br>
+			they will cease; where there are tongues, <br>
+			they will be stilled; where there is knowledge, <br>
+			it will pass away.<br>
+			<br>
                 <p>-Corinthians 13:4-8</p>
 
 	<p><strong>Poem #3</strong></p>
                 <h5>When You Come</h5>
-		<p>When you come to me, unbidden,
-		Beckoning me
-		To long-ago rooms,
-		Where memories lie.
-
-		Offering me, as to a child, an attic,
-		Gatherings of days too few.
-		Baubles of stolen kisses.
-		Trinkets of borrowed loves.
-		Trunks of secret words,
-
+		<p>When you come to me, unbidden, <br>
+		Beckoning me <br>
+		To long-ago rooms, <br>
+		Where memories lie.<br>
+		<br>
+		
+		Offering me, as to a child, an attic, <br>
+		Gatherings of days too few. <br>
+		Baubles of stolen kisses. <br>
+		Trinkets of borrowed loves. <br>
+		Trunks of secret words, <br>
+		<br>
 		I CRY.</p>
                 <p>-Maya Angelou</p>
 
