--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
 	<h3 id="contact">Contact Us</h3>
-	<p>Email: <a href="mailto:nuridayu@mcruncher.com?Subject=Hello%20again" target="_top">nuridayu@mcruncher.com</a></p>
+	<p>Email: <a href="mailto:nuridayu.suhaimi14@gmail.com?Subject=Hello%20again" target="_top">nuridayu@mcruncher.com</a></p>
 	<p>Facebook :<a href="https://www.facebook.com" target="_blank">Facebook</a></p>
 </body>
 </html>
